--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "i-dep": "npm install && npm install --prefix server && npm install --prefix client",
     "dev": "concurrently -k -n server,client -c magenta,cyan \"npm --prefix server run dev\" \"npm --prefix client run dev\"",
     "dev-client": "npm run --prefix client dev",
-    "dev-server": "npm run --prefix server dev"
+    "dev-server": "npm run --prefix server dev",
+    "build-and-start": "npm install --prefix server && npm install --prefix client && npm run build --prefix client && npm start --prefix server"
   },
   "devDependencies": {
     "concurrently": "^9.0.0"
